# paradox-plus

./: .gitignore  04_ROADMAP.md  AGENTS.md  Cargo.toml  IOS_TROUBLE.md  MODULE_MAP.md  MODULE_MAP.ron  Makefile  PARADOX_GAME.md  README.md  courses.json
archive/: scaffold.sh
crates/client/: .gitignore  Cargo.toml
crates/client/src/: lib.rs  main.rs  mobile.rs  replication.rs
crates/client/src/network/: events.rs  mod.rs  resources.rs  systems.rs
crates/client/src/presenter/: components.rs  helpers.rs  mod.rs  systems.rs
crates/client/src/ui/: components.rs  mod.rs
crates/client/src/ui/layout/: board.rs  bottom_bar.rs  landing.rs  leaderboard.rs  match_summary.rs  mod.rs  scorecard_buttons.rs  settings.rs  top_hud.rs
crates/client/src/ui/layout/setup/: course.rs  mod.rs  mode.rs  nickname.rs
crates/client/src/ui/systems/: hover.rs  interactions.rs  mod.rs  screen.rs  settings.rs  setup.rs
crates/client/src/ui/systems/audio/: mod.rs  resources.rs  systems.rs
crates/client/src/ui/systems/simulation/: board.rs  leaderboard.rs  mod.rs  render.rs  scorecard_render.rs  wager_buttons.rs
crates/client/src/ui/systems/simulation/board/: borders.rs  camera.rs  geometry.rs  interaction.rs  mod.rs  spawning.rs  style.rs  token.rs  tokens.rs  wager_meshes.rs
crates/client/src/ui/systems/simulation/loopback/: mod.rs  state.rs
crates/client/src/ui/systems/simulation/loopback/handlers/: banana.rs  dice.rs  mod.rs  movement.rs  roll.rs  terrain.rs  wager.rs
crates/client/tests/: loopback_tests.rs  replication_tests.rs  ui_tests.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  messages.rs  physics.rs
crates/protocol/src/fsm/: mod.rs  rules.rs  transitions.rs
crates/protocol/src/terrain/: mod.rs  types.rs
crates/protocol/src/terrain/presets/: blue.rs  green.rs  mod.rs
crates/protocol/src/terrain/resolution/: bunker.rs  green.rs  mod.rs  standard.rs
crates/protocol/tests/: physics_tests.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
crates/server/src/ai/: components.rs  mdp_state.rs  mod.rs
crates/server/src/ai/mdp_solver/: landing.rs  mod.rs  physics.rs  sweep.rs  table.rs  transitions.rs
crates/server/src/ai/systems/: solver.rs  takeover.rs
crates/server/src/systems/: broadcast.rs  fsm.rs  mod.rs  validation.rs
crates/server/tests/: ai_async_tests.rs  ai_tests.rs  fsm_tests.rs
doc/: 05_SYSTEMS_ARCHITECTURE.md  06_SYSTEMS_DESIGN.md  CREATOR_SETUP_AND_PROCESS.md  PARADOX_GAME.md  testing_strategy.md
doc/adr/: 0001-server-dual-target.md  0002-graceful-quic-stubbing.md  0003-mdp-state-index-simplification.md  0004-course-track-newtype-resource.md  0005-wasm-getrandom-backend.md  0006-course-presets.md  0007-client-offline-simulation.md  0008-solo-practice-setup-lifecycle.md  0009-2d-world-space-board-rendering.md  0010-procedural-tile-mesh-rendering.md  0011-client-side-simulation-validation.md  0012-track-outer-boundary-chamfering.md  0013-rounded-rectangle-track-geometry.md  0014-track-aspect-ratio-fitting.md  0015-track-proportions-expansion.md  0016-scorecard-history-tracking.md  0017-in-progress-scorecard-toggle.md  0018-mobile-target-and-emulation-toolchains.md  0019-dynamic-safe-area-layouts.md  0020-ios-winit-native-entrypoint.md
ios/: exportOptions.plist
ios/ParadoxPlus/: App.swift  Info.plist  main.swift
ios/ParadoxPlus.xcodeproj/: project.pbxproj
ios/ParadoxPlus/Assets.xcassets/AppIcon.appiconset/: Contents.json
tools/: generate_sounds.py  generate_xcodeproj.py
tools/critique/: Cargo.toml
tools/critique/src/: main.rs
