[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = ["bevy_state"] }
fixed = { version = "1.23.0", features = ["serde"] }
heapless = { version = "0.8.0", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
postcard = { workspace = true }
console_error_panic_hook = { version = "0.1.7" }
getrandom = { version = "0.3", features = ["wasm_js"] }
protocol = { path = "../protocol" }
