[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
bevy = { version = "0.14.0", default-features = false, features = ["bevy_state", "bevy_ui", "bevy_text", "bevy_asset", "bevy_winit", "bevy_core_pipeline", "bevy_sprite", "default_font", "png", "bevy_audio", "vorbis", "wav", "mp3"] }
fixed = { version = "1.23.0", features = ["serde"] }
heapless = { version = "0.8.0", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
postcard = { workspace = true }
console_error_panic_hook = { version = "0.1.7" }
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.12", features = ["js"] }
rand = "0.8.5"
protocol = { path = "../protocol" }

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.13"
log = "0.4"

[package.metadata.android]
package = "com.paradox.plus.client"
apk_name = "Paradox"
resources = "res"
assets = "../../assets"
include_cplusplus_shared = true

[package.metadata.android.application]
label = "Paradox"
icon = "@mipmap/ic_launcher"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 33
