[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
bevy = { version = "0.14.0", default-features = false }
tokio = { version = "1.35.0", features = ["full"] }
quinn = "0.11.0"
rustls = { version = "0.23.0", default-features = false }
fixed = { version = "1.23.0", features = ["serde"] }
heapless = { version = "0.8.0", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
postcard = { workspace = true }
